--- a/advanced/package.json
+++ b/advanced/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "body-parser": "^2.2.0",
-    "express": "^5.1.0",
-    "fs-extra": "^11.3.0"
+    "express": "^4.17.1",
+    "fs-extra": "^11.3.0",
+    "merge-descriptors": "^2.0.0"
   }
 }
